Project

General

Profile

Actions

Bug #59698

open

lua: error information is missign when package installation fails

Added by Yuval Lifshitz 12 months ago. Updated 12 months ago.

Status:
Pending Backport
Priority:
Low
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
reef, quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

"WARNING: failed to install lua packages from allowlist" does not provide all details needed for debug


Related issues 2 (2 open0 closed)

Copied to Ceph - Backport #61191: reef: lua: error information is missign when package installation failsNewActions
Copied to Ceph - Backport #61192: quincy: lua: error information is missign when package installation failsNewActions
Actions #1

Updated by Yuval Lifshitz 12 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 51415
Actions #2

Updated by Yuval Lifshitz 12 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot 12 months ago

  • Copied to Backport #61191: reef: lua: error information is missign when package installation fails added
Actions #4

Updated by Backport Bot 12 months ago

  • Copied to Backport #61192: quincy: lua: error information is missign when package installation fails added
Actions #5

Updated by Backport Bot 12 months ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF