rgw/lua: add more info on package install errors

Fixes: https://tracker.ceph.com/issues/59698

Signed-off-by: Yuval Lifshitz <yuvalif@yahoo.com>
(cherry picked from commit 35830359dff39bc0636a5fc68524c964dd5989f3)